<resources>
    <string name="app_name">Find The Shipper</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapbox_token">pk.eyJ1IjoidHJpbmh2YW5taW5oMjAwOSIsImEiOiJjamEzcHp4Znc5c2h0MnlsZzlnaTcxbG52In0.laDeGo3m9hW2JHRdgZftIg</string>
    <string name="facebook_app_id" translatable="false">432808617097084</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb432808617097084</string>
    <string name="please_wait_facebooklogin">Just a moment</string>
    <string name="required_permission_location">Access to the location is required turn on location.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required_toast"> Location permission is required for this function.</string>
    <string name="start_place">Choose place to start</string>
    <string name="finish_place">Choose place to finish</string>
    <string name="cityCenter">Ho Chi Minh city</string>
    <string name="choosing_starting_point">Drag the maps into place you want to start. Your place right marker.</string>
    <string name="choosing_finish_point">Drag the maps into place you want to finish.Your place right marker.</string>
    <string name="choosing_places_success">Choose places success. Move on create new order.</string>
    <string name="create_order">Create Order</string>
    <string name="create_new_order">Create New Order</string>
    <string name="created_order">Created Order</string>
    <string name="created">Created: &#160;</string>
    <string name="destination" translatable="false">Destination: &#160;</string>
    <string name="text_view_start_place">Start place: &#160;</string>
    <string name="edit_text_start_place">Place for shipper get products</string>
    <string name="text_view_advance_money">Advance money</string>
    <string name="edit_text_advance_money">Count by k (100 display 100k)</string>
    <string name="text_view_ship_money">Ship money</string>
    <string name="edit_text_ship_money">About 25k</string>
    <string name="text_view_note">Note</string>
    <string name="edit_text_note">Descriptive more</string>
    <string name="text_view_phone_number">Phone number</string>
    <string name="edit_text_phone_number">Your phone number</string>
    <string name="order_status">Status: The order canceled..</string>
    <string name="order_status_getting_started">Status: The shipper is coming soon</string>
    <string name="order_status_waiting_shipper">Status: Finding the shipper</string>
    <string name="order_status_completed">Status: The order is completed</string>
    <string name="order_starting_point">Starting point: </string>
    <string name="order_finish_point">Finish point: </string>
    <string name="order_advanced_money">Advanced money: </string>
    <string name="order_ship_money">Ship money: </string>
    <string name="order_note">Note:</string>
    <string name="order_distance">Distance: </string>
    <string name="order_phone_number">Phone number: </string>
    <string name="order_edit">Edit</string>
    <string name="order_find_again">Find again</string>
    <string name="order_success">Order completed</string>
    <string name="order_call">Call</string>
    <string name="order_last_updated">Last updated:&#160;</string>
    <string name="notification_title">Notification</string>
    <string name="list_order_shipper">List Order</string>
    <string name="list_order_saved_shipper">Saved order</string>
    <string name="pay_coin_shipper">Pay coin</string>
    <string name="history">History</string>
    <string name="buy_package_shipper">Buy package</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="tutorials">Tutorials</string>
    <string name="version">Version</string>
    <string name="about_us">About us</string>
    <string name="log_out">Logout</string>
    <string name="comment">Comment</string>
    <string name="call">Call</string>
    <string name="call_shipper">Call Shipper</string>
    <string name="edit">Edit</string>
    <string name="shipper_information">Shipper Info</string>
    <string name="save">Save</string>
    <string name="get_order">Get Order</string>
    <string name="cancel_order">Cancel order</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="type_comment">Type a comment&#8230;</string>
    <string name="send">Send</string>
    <string name="save_order">Save order success</string>
    <string name="save_order_exists">This order already exists!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="current_phone_number">Current phone number</string>
    <string name="number_order_show">Number order show</string>
    <string name="always_on_display">Always on display</string>
    <string name="change_mode">Change Mode</string>
    <string name="change_language">Change language</string>
    <string name="summary_always_on_display">Your phone will always on display while using this application </string>
    <string name="summary_change_mode">You being the shop, you can create the orders.</string>
    <string name="summary_change_mode_to_shipper">You being the shipper. Let\'s start earned money</string>
    <string name="summary_language">Select the another language</string>
    <string name="summary_number_order_show">Maximum number orders will show</string>
    <string name="ha_noi">Ha Noi</string>
    <string name="ho_chi_minh">Ho Chi Minh city</string>
    <string name="ship_mode">Ship click right here</string>
    <string name="shop_mode">Shop click right here</string>
    <string name="phone_invalid_title">Phone number invalid</string>
    <string name="phone_invalid_summary">Please check your phone number again</string>
    <string name="money_ship_invalid_title">Money ship invalid</string>
    <string name="money_ship_invalid_summary">You have to input money ship</string>
    <string name="please_wait">Please wait</string>
    <string name="wait_server">Just a moment. Loading data from server</string>
    <string name="wait_find_direction">Just a moment. Finding directions</string>
    <string name="time_ago_just_now">Just now</string>
    <string name="time_ago_minutes_ago"> minutes ago</string>
    <string name="time_ago_hours_ago"> hours ago</string>
    <string name="time_ago_days_ago"> days ago</string>
    <string name="time_ago_yesterday">Yesterday</string>
    <string name="time_ago_a_minutes_ago">a minute ago</string>
    <string name="are_you_sure_title">Are you sure?</string>
    <string name="are_you_sure_content">This order won\'t be shown in history anymore!</string>
    <string name="warning">Warning!</string>
    <string name="status_take_your_order_content">You can\'t get your orders!</string>
    <string name="status_take_order_already_ordered">Another delivery man took this orders!</string>
    <string name="status_want_to_take_order">Are you sure want to take orders</string>
    <string name="status_want_to_take_order_title">You can take orders</string>
    <string name="status_want_to_cancel_order">This action cannot be undone.</string>
    <string name="success">Success!</string>
    <string name="status_took_order">You took orders! Please waiting for notification or you can contact shop!  </string>
    <string name="status_already_took_orders">You took orders! Please check in list orders taken!</string>
    <string name="notification_state_2">want to get this order. Please confirm to continue!</string>
    <string name="direction">Direction</string>
    <string name="notification_shop_canceled_order">Sorry! I have to cancel this order.</string>
    <string name="detail">Detail</string>
    <string name="content_cancel_order">This order will be canceled!</string>
    <string name="warning_state_order_3">The delivery man is working. This order cannot be canceled</string>
    <string name="warning_state_order_4">Completed order! If you want to remove this order please click detail order.</string>
    <string name="ask_for_accept_shipper_title">Shipper!</string>
    <string name="ask_for_accept_shipper">Would you like this accept this shipper for delivery this item!</string>
    <string name="shipper_not_found">This order doesn\'t have shipper. Please waiting system find out.</string>
    <string-array name="change_language_array">
        <item>Vietnamese</item>
        <item>English</item>
    </string-array>
    <string-array name="change_language_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="list_state_order">
        <item>Find</item>
        <item>Confirm</item>
        <item>Delivery</item>
        <item>Done</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_detail_order_shipper" translatable="false">DetailOrderShipperActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_direction_shipper">Map</string>
</resources>