<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/always_on_display"
        android:shadowColor="@color/md_green_400"
        android:title="@string/always_on_display"
        android:summary="@string/summary_always_on_display">
    </SwitchPreference>

    <EditTextPreference
        android:key="@string/number_order_show"
        android:title="@string/number_order_show"
        android:summary="@string/summary_number_order_show"
        android:maxLines="1"
        android:defaultValue="200"
        android:inputType="number">
    </EditTextPreference>

    <ListPreference android:key="@string/change_language"
        android:title="@string/change_language"
        android:entries="@array/change_language_array"
        android:entryValues="@array/change_language_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/summary_language"
       >
    </ListPreference>
<Preference android:title="@string/change_mode"
    android:summary="@string/summary_change_mode">
    <intent android:action="android.intent.action.VIEW"
        android:targetPackage="com.minh.findtheshipper"
        android:targetClass="com.minh.findtheshipper.ChoosePlace">

    </intent>
</Preference>
</PreferenceScreen>